--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,21 +1,27 @@
 {
-  "workbench.iconTheme": "material-icon-theme",
-  "gitlens.advanced.messages": {
-    "suppressCommitHasNoPreviousCommitWarning": false,
-    "suppressCommitNotFoundWarning": false,
-    "suppressFileNotUnderSourceControlWarning": false,
-    "suppressGitVersionWarning": false,
-    "suppressLineUncommittedWarning": false,
-    "suppressNoRepositoryWarning": false,
-    "suppressUpdateNotice": false,
-    "suppressWelcomeNotice": true
-  },
-  "files.autoSave": "onFocusChange",
-  "editor.fontSize": 14,
-  "editor.formatOnType": true,
-  "editor.formatOnPaste": true,
-  "prettier.eslintIntegration": true,
-  "prettier.printWidth": 100,
-  "prettier.semi": false,
-  "prettier.singleQuote": true
+    "workbench.iconTheme": "material-icon-theme",
+    "gitlens.advanced.messages": {
+        "suppressCommitHasNoPreviousCommitWarning": false,
+        "suppressCommitNotFoundWarning": false,
+        "suppressFileNotUnderSourceControlWarning": false,
+        "suppressGitVersionWarning": false,
+        "suppressLineUncommittedWarning": false,
+        "suppressNoRepositoryWarning": false,
+        "suppressUpdateNotice": false,
+        "suppressWelcomeNotice": true
+    },
+    "files.autoSave": "onFocusChange",
+    "editor.fontSize": 14,
+    "editor.formatOnType": true,
+    "editor.formatOnPaste": true,
+    "prettier.eslintIntegration": true,
+    "prettier.printWidth": 100,
+    "prettier.semi": false,
+    "prettier.singleQuote": true,
+    "workbench.startupEditor": "none",
+    "window.title": "${activeEditorMedium}${separator}${rootName}",
+    "cSpell.userWords": [
+        "fedops"
+    ],
+    "cSpell.language": "en"
 }
