--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -7,6 +7,8 @@
         "suppressGitVersionWarning": false,
         "suppressLineUncommittedWarning": false,
         "suppressNoRepositoryWarning": false,
+        "suppressResultsExplorerNotice": false,
+        "suppressShowKeyBindingsNotice": true,
         "suppressUpdateNotice": false,
         "suppressWelcomeNotice": true
     },
@@ -22,16 +24,26 @@
     "cSpell.userWords": [
         "Backend",
         "consts",
+        "databinding",
+        "dataset",
+        "dataset's",
+        "datetime",
+        "dropdown",
+        "elementory",
         "fedops",
-        "testkit"
+        "memberof",
+        "testkit",
+        "unconfigured",
+        "zivl"
     ],
     "cSpell.language": "en",
     "search.exclude": {
-        "dist": true,
-        "coverage": true,
-        "target": true,
+        "**/dist": true,
+        "**/coverage": true,
+        "**/target": true,
         "**/node_modules": true,
-        "**/bower_components": true
+        "**/bower_components": true,
+        "**/*.rt.js": true
     },
     "files.trimFinalNewlines": true,
     "files.trimTrailingWhitespace": true,
@@ -50,5 +62,10 @@
     "git.autofetch": true,
     "git.enableSmartCommit": true,
     "workbench.sideBar.location": "left",
-    "editor.fontFamily": "'Ubuntu Mono derivative Powerline', Menlo, Monaco, 'Courier New', monospace"
+    "editor.fontFamily": "'Ubuntu Mono derivative Powerline', Menlo, Monaco, 'Courier New', monospace",
+    "window.zoomLevel": 0,
+    "gitlens.keymap": "none",
+    "terminal.integrated.fontSize": 18,
+    "material-icon-theme.showUpdateMessage": false,
+    "gitlens.historyExplorer.enabled": true
 }
