--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -16,14 +16,21 @@
     "editor.fontSize": 17,
     "editor.formatOnType": true,
     "prettier.eslintIntegration": true,
-    "prettier.printWidth": 100,
+    "prettier.printWidth": 120,
     "prettier.semi": false,
     "prettier.singleQuote": true,
     "workbench.startupEditor": "none",
     "window.title": "${activeEditorMedium}${separator}${rootName}",
     "cSpell.userWords": [
         "Backend",
+        "Guid",
+        "Lightbox",
+        "Metasite",
+        "Optimus",
+        "Polyfill",
         "Truthy",
+        "Unmount",
+        "Webapp",
         "consts",
         "databinding",
         "dataset",
@@ -32,21 +39,27 @@
         "dropdown",
         "elementory",
         "fedops",
+        "grpc",
         "memberof",
+        "middlewares",
+        "siteless",
         "testkit",
+        "transpiled",
         "uncomment",
         "unconfigured",
+        "upsert",
+        "youtube",
         "zivl"
     ],
     "cSpell.language": "en",
     "search.exclude": {
-        "**/dist": true,
-        "**/coverage": true,
-        "**/target": true,
-        "**/node_modules": true,
-        "**/bower_components": true,
-        "**/*.rt.js": true,
-        "**/messages_*.json": true
+      "**/dist": true,
+      "**/coverage": true,
+      "**/target": true,
+      "**/node_modules": true,
+      "**/bower_components": true,
+      "**/*.rt.js": true,
+      "**/.eslintcache": true
     },
     "files.trimFinalNewlines": true,
     "files.trimTrailingWhitespace": true,
@@ -70,5 +83,24 @@
     "gitlens.keymap": "none",
     "terminal.integrated.fontSize": 18,
     "material-icon-theme.showUpdateMessage": false,
-    "gitlens.historyExplorer.enabled": true
+    "gitlens.historyExplorer.enabled": true,
+    "eslint.nodePath": "./node_modules/eslint-config-experts",
+    "workbench.colorTheme": "Visual Studio Dark",
+    "wallaby.node": "/Users/zivl/.nvm/versions/node/v10.14.1/bin/node",
+    "gitlens.views.fileHistory.enabled": true,
+    "gitlens.views.lineHistory.enabled": true,
+    "breadcrumbs.enabled": false,
+    "editor.minimap.enabled": true,
+    "editor.renderControlCharacters": false,
+    "editor.renderWhitespace": "none",
+    "[javascript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "search.followSymlinks": false,
+    "[typescriptreact]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[typescript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    }
 }
